Updated the structure of the root project